--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@
     <string name="no_gift">No gift found, Please redeem some product</string>
     <string name="upc_mismatch">Scan UPC is mismatch, Please edit and verify OR Remove and scan again!</string>
     <string name="upc_option">Use any option to Add UPC in Cart</string>
+
+    <string name="click_here">Please click on scan button to scan the UPC.</string>
 </resources>
